2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* configure.ac:
	* ext/Makefile.am:
	* ext/pango/Makefile.am:
	* ext/pango/gstclockoverlay.c:
	* ext/pango/gstclockoverlay.h:
	* ext/pango/gsttextoverlay.c:
	* ext/pango/gsttextoverlay.h:
	* ext/pango/gsttextrender.c:
	* ext/pango/gsttextrender.h:
	* ext/pango/gsttimeoverlay.c:
	* ext/pango/gsttimeoverlay.h:
	  move pango to base

2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstrtpL16depay.c:
	* gst/rtp/gstrtpL16depay.h:
	* gst/rtp/gstrtpL16parse.c:
	* gst/rtp/gstrtpL16parse.h:
	* gst/rtp/gstrtpgsmdepay.c:
	* gst/rtp/gstrtpgsmdepay.h:
	* gst/rtp/gstrtpgsmparse.c:
	* gst/rtp/gstrtpgsmparse.h:
	  parsers are depayers

2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* gst/rtp/Makefile.am:
	* gst/rtp/gstasteriskh263.c:
	* gst/rtp/gstrtp.c:
	* gst/rtp/gstrtpL16enc.c:
	* gst/rtp/gstrtpL16enc.h:
	* gst/rtp/gstrtpL16parse.c:
	* gst/rtp/gstrtpL16parse.h:
	* gst/rtp/gstrtpL16pay.c:
	* gst/rtp/gstrtpL16pay.h:
	* gst/rtp/gstrtpamrdec.c:
	* gst/rtp/gstrtpamrdec.h:
	* gst/rtp/gstrtpamrdepay.c:
	* gst/rtp/gstrtpamrdepay.h:
	* gst/rtp/gstrtpamrenc.c:
	* gst/rtp/gstrtpamrenc.h:
	* gst/rtp/gstrtpamrpay.c:
	* gst/rtp/gstrtpamrpay.h:
	* gst/rtp/gstrtpdec.c:
	* gst/rtp/gstrtpdec.h:
	* gst/rtp/gstrtpdepay.c:
	* gst/rtp/gstrtpdepay.h:
	* gst/rtp/gstrtpg711dec.c:
	* gst/rtp/gstrtpg711dec.h:
	* gst/rtp/gstrtpg711depay.c:
	* gst/rtp/gstrtpg711depay.h:
	* gst/rtp/gstrtpg711enc.c:
	* gst/rtp/gstrtpg711enc.h:
	* gst/rtp/gstrtpg711pay.c:
	* gst/rtp/gstrtpg711pay.h:
	* gst/rtp/gstrtpgsmenc.c:
	* gst/rtp/gstrtpgsmenc.h:
	* gst/rtp/gstrtpgsmparse.c:
	* gst/rtp/gstrtpgsmparse.h:
	* gst/rtp/gstrtpgsmpay.c:
	* gst/rtp/gstrtpgsmpay.h:
	* gst/rtp/gstrtph263enc.c:
	* gst/rtp/gstrtph263enc.h:
	* gst/rtp/gstrtph263pay.c:
	* gst/rtp/gstrtph263pay.h:
	* gst/rtp/gstrtph263pdec.c:
	* gst/rtp/gstrtph263pdec.h:
	* gst/rtp/gstrtph263pdepay.c: